[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Font/use_this.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Textbox.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.00392157, 0, 0.0784314, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.121569, 0, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 23
outline_size = 1
outline_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0.0823529, 0, 0.105882, 1 )
font_data = ExtResource( 1 )

[node name="Textbox" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="TextContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -385.0
margin_top = -94.0
margin_right = 385.0
margin_bottom = -14.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="TextContainer"]
margin_right = 770.0
margin_bottom = 80.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextContainer"]
margin_right = 770.0
margin_bottom = 80.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TextContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 762.0
margin_bottom = 72.0

[node name="Start" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_right = 13.0
margin_bottom = 23.0
rect_min_size = Vector2( 7, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "*"

[node name="Label2" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 739.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 3 )
text = "amongus"
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextContainer/MarginContainer/HBoxContainer"]
margin_left = 743.0
margin_top = 41.0
margin_right = 754.0
margin_bottom = 64.0
rect_min_size = Vector2( 11, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -382.0
margin_top = -121.0
margin_right = -52.0
margin_bottom = -93.0
custom_fonts/font = SubResource( 4 )
text = "NAME"

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
